Added better upgraded model parsing code